Implementacion de nuevo filtro por metodo start_query
